--- a/dev/assets/styles/core.css
+++ b/dev/assets/styles/core.css
@@ -510,6 +510,7 @@ body.page .section_body .section_code {
   line-height: 1.5;
   margin: 1em 0;
   letter-spacing: 0.1em;
+  word-break: break-all;
 }
 
 /*# sourceMappingURL=core.css.map */
