--- a/dev/assets/styles/core.css
+++ b/dev/assets/styles/core.css
@@ -1,5 +1,20 @@
 @charset "UTF-8";
 /*　*/
+@font-face {
+  font-family: NotoSans-Regular;
+  font-style: normal;
+  src: url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Regular.otf) format("otf"), url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Regular.woff) format("woff");
+}
+@font-face {
+  font-family: NotoSans-Medium;
+  font-style: normal;
+  src: url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Medium.otf) format("otf"), url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Medium.woff) format("woff");
+}
+@font-face {
+  font-family: NotoSans-Bold;
+  font-style: normal;
+  src: url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Bold.otf) format("otf"), url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Bold.woff) format("woff");
+}
 html {
   color: #000;
   background: #FFF;
@@ -80,6 +95,21 @@ textarea {
   background: none;
 }
 
+img {
+  vertical-align: bottom;
+}
+
+input,
+select,
+textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border: none;
+  border-radius: 0;
+  outline: none;
+  background: none;
+}
+
 .unactive {
   pointer-events: none;
 }
@@ -110,36 +140,12 @@ textarea {
   display: table-cell;
 }
 
-img {
-  vertical-align: bottom;
+input {
+  padding: 5px 10px;
+  border: 1px solid #a2a2a2;
+  border-radius: 5px;
 }
 
-input,
-select,
-textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  border: none;
-  border-radius: 0;
-  outline: none;
-  background: none;
-}
-
-@font-face {
-  font-family: NotoSans-Regular;
-  font-style: normal;
-  src: url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Regular.otf) format("otf"), url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Regular.woff) format("woff");
-}
-@font-face {
-  font-family: NotoSans-Medium;
-  font-style: normal;
-  src: url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Medium.otf) format("otf"), url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Medium.woff) format("woff");
-}
-@font-face {
-  font-family: NotoSans-Bold;
-  font-style: normal;
-  src: url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Bold.otf) format("otf"), url(../../assets/fonts/notosans/Subset-NotoSansCJKjp-Bold.woff) format("woff");
-}
 html, body {
   width: 100%;
   height: auto;
@@ -326,21 +332,6 @@ a {
 }
 
 /*　*/
-img {
-  vertical-align: bottom;
-}
-
-input,
-select,
-textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  border: none;
-  border-radius: 0;
-  outline: none;
-  background: none;
-}
-
 @font-face {
   font-family: NotoSans-Regular;
   font-style: normal;
@@ -403,21 +394,6 @@ body.top .readmore a:hover {
 }
 
 /*　*/
-img {
-  vertical-align: bottom;
-}
-
-input,
-select,
-textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  border: none;
-  border-radius: 0;
-  outline: none;
-  background: none;
-}
-
 @font-face {
   font-family: NotoSans-Regular;
   font-style: normal;
