--- a/src/assets/sass/util/_basefix.scss
+++ b/src/assets/sass/util/_basefix.scss
@@ -1,6 +1,24 @@
 // Base Fix
 
 //* ==================================================
+//	Reset
+//================================================== */
+
+img {
+	vertical-align: bottom;
+}
+input,
+select,
+textarea {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	border: none;
+	border-radius: 0;
+	outline:none;
+	background: none;
+}
+
+//* ==================================================
 //	Css Helper
 //================================================== */
 
@@ -32,4 +50,10 @@
 }
 .is--table_text {
 	display: table-cell;
+}
+
+input {
+	padding: 5px 10px;
+	border: 1px solid $gray;
+	border-radius: 5px;
 }
